--- a/samples/JsMeterSampleFunctionWithParameter.html
+++ b/samples/JsMeterSampleFunctionWithParameter.html
@@ -40,12 +40,14 @@
 
     var result4 = JsMeter.getExecutionTime(function () { SumArrayWithForIn(globalArray); }, 6);
 
+    var r = JsMeter.getOperationPerSecond(function () { SumArrayWithForIn(globalArray); });
 
     var div = document.getElementById("resultsDiv");
-    div.innerHTML += "<br/>" + result1.ExecutionTime + " +- " + result1.Deviation;
-    div.innerHTML += "<br/>" + result2.ExecutionTime + " +- " + result2.Deviation;
-    div.innerHTML += "<br/>" + result3.ExecutionTime + " +- " + result3.Deviation;
-    div.innerHTML += "<br/>" + result4.ExecutionTime + " +- " + result4.Deviation;
+    div.innerHTML += "<br/>" + result1.ExecutionTime + " +- " + result1.Deviation + " -> " + result1.DeviationPerCent;
+    div.innerHTML += "<br/>" + result2.ExecutionTime + " +- " + result2.Deviation + " -> " + result2.DeviationPerCent;
+    div.innerHTML += "<br/>" + result3.ExecutionTime + " +- " + result3.Deviation + " -> " + result3.DeviationPerCent;
+    div.innerHTML += "<br/>" + result4.ExecutionTime + " +- " + result4.Deviation + " -> " + result4.DeviationPerCent;
+    div.innerHTML += "<br/>" + r;
     </script>
 
 </body>
