--- a/samples/JsMeterSampleTracking.html
+++ b/samples/JsMeterSampleTracking.html
@@ -2,46 +2,33 @@
 <head>
     <title>Test JsMeter</title>
     <script language="javascript" src="../src/JsMeter.js"></script>
+    <script language="javascript" src="fibonacci.js"></script>
 
-</head>
-<body>
-    <div id="resultsDiv"></div>
     <script language="javascript">
+        function CalculateFibonacciWithTracking()
+        {
+            JsMeter.StartTracking("fibonacci_cached");
 
-        /*Sample performance function with parameters*/
+            var fibCached = fibonacci_memoized(40);
+            document.getElementById("fibCachedResult").innerHTML = fibCached;
 
-        var globalArray = [1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9, 1, 2, 3, 4, 5, 6, 7, 8, 9];
+            JsMeter.EndTracking("fibonacci_cached");
 
+            JsMeter.StartTracking("fibonacci");
 
-        function SumArrayWithFor(pArray) {
-            var total,
-                arrayLength;
+            var fib = fibonacci(40);
+            document.getElementById("fibResult").innerHTML = fib;
 
-            arrayLength = pArray.length;
-            JsMeter.StartTracking("For");
-            for (var i = 0; i < arrayLength; i++) {
-                total += pArray[i];
-            }
-            JsMeter.EndTracking();
-
-            JsMeter.StartTracking("ForIn");
-            for (var value in pArray) {
-                total += value;
-            }
-            JsMeter.EndTracking();
-
-            return total;
+            JsMeter.EndTracking("fibonacci");
         }
-
-        SumArrayWithFor(globalArray);
-
-
-        var results = JsMeter.GetTrackings();
-
-        var div = document.getElementById("resultsDiv");
-        div.innerHTML = results.toString();
+        
     </script>
 
+</head>
+<body onload="CalculateFibonacciWithTracking();">
+       Fibonacci: <div id="fibResult"></div>
+        <br />
+    Fibonacci cached:<div id="fibCachedResult"></div>
 </body>
 </html>
 
