--- a/samples/JsMeterSampleGetOperationPerSecond.html
+++ b/samples/JsMeterSampleGetOperationPerSecond.html
@@ -7,9 +7,9 @@
     <script language="javascript">
         function GenerarBenchmark()
         {
-            var resultsFibMemo = JsMeter.getOperationPerSecond(function () { fibonacci_memoized(40); });
+            var resultsFibMemo = JsMeter.getOperationsPerSecond(function () { fibonacci_memoized(40); });
 
-            var resultsFib = JsMeter.getOperationPerSecond(function () { fibonacci(40); });
+            var resultsFib = JsMeter.getOperationsPerSecond(function () { fibonacci(40); });
 
             document.getElementById("fibOperPerSecond").innerHTML = resultsFib.OperPerSecond;
             document.getElementById("fibDeviation").innerHTML = resultsFib.Deviation;
